[package]
name = "random_negative_weights"
version = "0.1.0"
edition = "2021"

[dependencies]
ez-bitset = "0.1.0"
num = "0.4.1"
ordered-float = "2.8.0" # Newest version throws errors in combination with `radix-heap`
radix-heap = { version = "0.4.2", features = ["ordered-float"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
structopt = "0.3.26"

[features]
no_print = [] # Do not print standard outputs - this feature should be used as a sub-feature
bf_test = [] # Cross-Check Rejections with the naive BF implementation
hops = ["no_print"] # Log the hop-distance of negative weight cycles found by Dijkstra to stdout
dfs_size = ["no_print"] # Log the number of traversed zero edges in Dijkstra 
bidir = [] # Run a bidirectional Dijkstra instead
