[package]
name = "random_negative_weights"
version = "0.1.0"
edition = "2021"

[dependencies]
array-init = "2.1.0"
ez-bitset = "0.1.0"
num = "0.4.1"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
structopt = "0.3.26"

[features]
default = []            # Set default features  
exp = []                # When this flag is enabled, we do an experiment
dfs_size = ["exp"]      # Log the number of traversed zero edges in Dijkstra 
sptree_size = ["exp"]   # Log the size of the shortest path trees in Dijkstra or BiDijkstra
intervals = ["exp"]     # Every 10000 rounds of the MCMC, log time taken, average weight, fraction of negative edges
