[package]
name = "random_negative_weights"
version = "0.1.0"
edition = "2021"

[dependencies]
array-init = "2.1.0"
ez-bitset = "0.1.0"
num = "0.4.1"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
structopt = "0.3.26"

[features]
default = ["insertions"]            # Set default features  
exp = []                # When this flag is enabled, we do an experiment
dfs_size = ["exp"]      # Log the number of traversed zero edges in Dijkstra 
intervals = ["exp"]     # Every 10000 rounds of the MCMC, log time taken, average weight, fraction of negative edges
acceptance = ["exp"]    # Log the acceptance rate over time  
insertions = ["exp"]    # Log the number of Queue-Insertions of an algorithm 
